configure logging actor system

--- a/src/main/resources/logging.conf
+++ b/src/main/resources/logging.conf
@@ -15,11 +15,11 @@ akka {
 
   # Log level for the very basic logger activated during AkkaApplication startup
   # Options: ERROR, WARNING, INFO, DEBUG
-  stdout-loglevel = "INFO"
+  stdout-loglevel = "DEBUG"
 
   # Log the complete configuration at INFO level when the actor system is started.
   # This is useful when you are uncertain of what configuration is used.
-  log-config-on-start = off
+  log-config-on-start = on
 
   # List FQCN of extensions which shall be loaded at actor system startup.
   # Should be on the format: 'extensions = ["foo", "bar"]' etc.
@@ -28,5 +28,23 @@ akka {
 
   # Toggles whether the threads created by this ActorSystem should be daemons or not
   daemonic = on
+
+  actor {
+
+  default-dispatcher {
+
+    fork-join-executor {
+      parallelism-min = 1
+
+      parallelism-factor = 1
+
+      parallelism-max = 2
+
+    }
+
+    throughput = 1000
+  }
+
+  }
 
 }
