--- a/src/main/resources/logging.conf
+++ b/src/main/resources/logging.conf
@@ -15,7 +15,7 @@ akka {
 
   # Log level for the very basic logger activated during AkkaApplication startup
   # Options: ERROR, WARNING, INFO, DEBUG
-  stdout-loglevel = "DEBUG"
+  stdout-loglevel = "INFO"
 
   # Log the complete configuration at INFO level when the actor system is started.
   # This is useful when you are uncertain of what configuration is used.
