--- a/src/main/resources/logging.conf
+++ b/src/main/resources/logging.conf
@@ -19,7 +19,7 @@ akka {
 
   # Log the complete configuration at INFO level when the actor system is started.
   # This is useful when you are uncertain of what configuration is used.
-  log-config-on-start = on
+  log-config-on-start = off
 
   # List FQCN of extensions which shall be loaded at actor system startup.
   # Should be on the format: 'extensions = ["foo", "bar"]' etc.
